# KangDroidLogger

./: CMakeLists.txt  README.md
cmake/: KangDroidLoggerConfig.cmake
